Expand project requirement options

--- a/index.html
+++ b/index.html
@@ -766,22 +766,52 @@
     <form id="projectForm" method="dialog">
       <h3>Project Requirements</h3>
       <div class="form-row"><label for="projectName">Project Name:<input type="text" id="projectName" name="projectName"></label></div>
-      <div class="form-row"><label for="requiredScenarios">Required Scenarios:
+      <div class="form-row"><label for="requiredScenarios">16. What required scenarios do we have for this shoot?
         <select id="requiredScenarios" name="requiredScenarios" multiple>
-          <option value="Handheld">Handheld</option>
+          <option value="Indoor">Indoor</option>
+          <option value="Outdoor">Outdoor</option>
+          <option value="Studio">Studio</option>
           <option value="Tripod">Tripod</option>
-          <option value="Gimbal">Gimbal</option>
-          <option value="Car Mount">Car Mount</option>
+          <option value="Handheld">Handheld</option>
+          <option value="Easyrig">Easyrig</option>
+          <option value="Cine Saddle">Cine Saddle</option>
+          <option value="Steadybag">Steadybag</option>
+          <option value="Dolly">Dolly</option>
+          <option value="Slider">Slider</option>
           <option value="Steadicam">Steadicam</option>
+          <option value="Gimbal">Gimbal</option>
+          <option value="Trinity">Trinity</option>
+          <option value="Rollcage">Rollcage</option>
+          <option value="Car Mount">Car Mount</option>
+          <option value="Jib">Jib</option>
+          <option value="Undersling mode">Undersling mode</option>
+          <option value="Crane">Crane</option>
+          <option value="Remote Head">Remote Head</option>
+          <option value="Extreme weather conditions (like snow, rain, heat)">Extreme weather conditions (like snow, rain, heat)</option>
+          <option value="Rain Machine">Rain Machine</option>
+          <option value="Slow Motion">Slow Motion</option>
+          <option value="Viewfinder Extension">Viewfinder Extension</option>
+          <option value="Zoom Remote handle">Zoom Remote handle</option>
+          <option value="Dolly Remote handle">Dolly Remote handle</option>
         </select>
       </label></div>
-      <div class="form-row"><label for="rigging">Camera Rigging:
+      <div class="form-row"><label for="rigging">17. How would you like to have your camera rigged?
         <select id="rigging" name="rigging" multiple>
-          <option value="Handheld">Handheld</option>
-          <option value="Shoulder Rig">Shoulder Rig</option>
-          <option value="Gimbal">Gimbal</option>
-          <option value="Tripod">Tripod</option>
-          <option value="Steadicam">Steadicam</option>
+          <option value="Shoulder rig">Shoulder rig</option>
+          <option value="Hand Grips">Hand Grips</option>
+          <option value="Teradek and Battery belt">Teradek and Battery belt</option>
+          <option value="Top handle extension">Top handle extension</option>
+          <option value="Rear Handle">Rear Handle</option>
+          <option value="Viewfinder + Onboard">Viewfinder + Onboard</option>
+          <option value="VF only">VF only</option>
+          <option value="Onboard only">Onboard only</option>
+          <option value="Clamp-On Mattebox">Clamp-On Mattebox</option>
+          <option value="Swingaway Mattebox">Swingaway Mattebox</option>
+          <option value="Rod based Mattebox">Rod based Mattebox</option>
+          <option value="Topflag">Topflag</option>
+          <option value="Sideflag">Sideflag</option>
+          <option value="Mattes">Mattes</option>
+          <option value="Film magazines">Film magazines</option>
         </select>
       </label></div>
       <div class="form-row"><label for="monitoringPreferences">Monitoring Preferences:
