Improve gear list project form

--- a/index.html
+++ b/index.html
@@ -767,7 +767,7 @@
       <h3>Project Requirements</h3>
       <div class="form-row"><label for="projectName">Project Name:<input type="text" id="projectName" name="projectName"></label></div>
       <div class="form-row"><label for="requiredScenarios">16. What required scenarios do we have for this shoot?
-        <select id="requiredScenarios" name="requiredScenarios" multiple>
+        <select id="requiredScenarios" name="requiredScenarios" multiple size="8">
           <option value="Indoor">Indoor</option>
           <option value="Outdoor">Outdoor</option>
           <option value="Studio">Studio</option>
@@ -796,7 +796,7 @@
         </select>
       </label></div>
       <div class="form-row"><label for="rigging">17. How would you like to have your camera rigged?
-        <select id="rigging" name="rigging" multiple>
+        <select id="rigging" name="rigging" multiple size="8">
           <option value="Shoulder rig">Shoulder rig</option>
           <option value="Hand Grips">Hand Grips</option>
           <option value="Teradek and Battery belt">Teradek and Battery belt</option>
@@ -815,7 +815,7 @@
         </select>
       </label></div>
       <div class="form-row"><label for="monitoringPreferences">Monitoring Preferences:
-        <select id="monitoringPreferences" name="monitoringPreferences" multiple>
+        <select id="monitoringPreferences" name="monitoringPreferences" multiple size="8">
           <option value="VF Clean Feed">VF Clean Feed</option>
           <option value="Onboard Clean Feed">Onboard Clean Feed</option>
           <option value="Surroundview (if available)">Surroundview (if available)</option>
@@ -837,7 +837,7 @@
         </select>
       </label></div>
       <div class="form-row"><label for="tripodPreferences">Tripod Preferences:
-        <select id="tripodPreferences" name="tripodPreferences" multiple>
+        <select id="tripodPreferences" name="tripodPreferences" multiple size="4">
           <option value="Lightweight">Lightweight</option>
           <option value="Heavy-duty">Heavy-duty</option>
           <option value="Hi-Hat">Hi-Hat</option>
@@ -845,7 +845,7 @@
         </select>
       </label></div>
       <div class="form-row"><label for="filters">Filters:
-        <select id="filters" name="filters" multiple>
+        <select id="filters" name="filters" multiple size="4">
           <option value="ND">ND</option>
           <option value="Polarizer">Polarizer</option>
           <option value="Diffusion">Diffusion</option>
