Format gear list with project details

--- a/index.html
+++ b/index.html
@@ -766,6 +766,15 @@
     <form id="projectForm" method="dialog">
       <h3>Project Requirements</h3>
       <div class="form-row"><label for="projectName">Project Name:<input type="text" id="projectName" name="projectName"></label></div>
+      <div class="form-row"><label for="dop">DoP:<input type="text" id="dop" name="dop"></label></div>
+      <div class="form-row"><label for="firstDay">First Day of Shooting:<input type="date" id="firstDay" name="firstDay"></label></div>
+      <div class="form-row"><label for="lastDay">Last Day of Shooting:<input type="date" id="lastDay" name="lastDay"></label></div>
+      <div class="form-row"><label for="deliveryResolution">Delivery Resolution:<input type="text" id="deliveryResolution" name="deliveryResolution"></label></div>
+      <div class="form-row"><label for="recordingResolution">Recording Resolution:<input type="text" id="recordingResolution" name="recordingResolution"></label></div>
+      <div class="form-row"><label for="aspectRatio">Aspect Ratio:<input type="text" id="aspectRatio" name="aspectRatio"></label></div>
+      <div class="form-row"><label for="codec">Codec:<input type="text" id="codec" name="codec"></label></div>
+      <div class="form-row"><label for="baseFrameRate">Base Frame Rate:<input type="text" id="baseFrameRate" name="baseFrameRate"></label></div>
+      <div class="form-row"><label for="lenses">Lenses:<input type="text" id="lenses" name="lenses"></label></div>
       <div class="form-row"><label for="requiredScenarios">16. What required scenarios do we have for this shoot?
         <select id="requiredScenarios" name="requiredScenarios" multiple size="8">
           <option value="Indoor">Indoor</option>
