--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <meta name="application-name" content="Camera Power Planner" />
   <meta name="apple-mobile-web-app-title" content="Camera Power Planner" />
   <title>Camera Power Planner</title>
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="overview-print.css" media="print" />
   <link rel="icon" href="icon.svg" type="image/svg+xml" />
