Add support for FIZ cables, camera support, and charger categories

--- a/index.html
+++ b/index.html
@@ -223,7 +223,10 @@
         <option value="fiz.motors">FIZ Motor</option>
         <option value="fiz.controllers">FIZ Controller</option>
         <option value="fiz.distance">FIZ Distance</option>
+        <option value="fiz.cables">FIZ Cable</option>
         <option value="batteries">V-Mount Battery</option>
+        <option value="accessories.cages">Camera Support</option>
+        <option value="accessories.chargers">Charger</option>
       </select>
     </div>
     <div class="form-row">
@@ -512,9 +515,24 @@
         <ul id="distanceList" class="device-ul"></ul>
       </div>
       <div class="device-category">
+        <h4 id="category_fiz_cables">FIZ Cables</h4>
+        <input type="search" id="fizCableListFilter" class="list-filter" placeholder="Filter..." aria-label="Filter" inputmode="search" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
+        <ul id="fizCableList" class="device-ul"></ul>
+      </div>
+      <div class="device-category">
         <h4 id="category_batteries">V-Mount Batteries</h4>
         <input type="search" id="batteryListFilter" class="list-filter" placeholder="Filter..." aria-label="Filter" inputmode="search" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
         <ul id="batteryList" class="device-ul"></ul>
+      </div>
+      <div class="device-category">
+        <h4 id="category_camera_support">Camera Support</h4>
+        <input type="search" id="cameraSupportListFilter" class="list-filter" placeholder="Filter..." aria-label="Filter" inputmode="search" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
+        <ul id="cameraSupportList" class="device-ul"></ul>
+      </div>
+      <div class="device-category">
+        <h4 id="category_chargers">Chargers</h4>
+        <input type="search" id="chargerListFilter" class="list-filter" placeholder="Filter..." aria-label="Filter" inputmode="search" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
+        <ul id="chargerList" class="device-ul"></ul>
       </div>
     </div>
   </section>
