--- a/index.html
+++ b/index.html
@@ -99,6 +99,14 @@
         </div>
       </div>
 
+      <div class="form-row">
+        <label for="cageSelect" id="cageLabel">Camera Cage:</label>
+        <div class="select-wrapper">
+          <input type="search" id="cageFilter" class="filter-input" placeholder="Filter..." aria-label="Filter" inputmode="search" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
+          <select id="cageSelect" aria-labelledby="cageLabel"></select>
+        </div>
+      </div>
+
     <fieldset>
       <legend id="fizLegend">FIZ (Follow Focus) Systems</legend>
       <div class="form-row">
