Add prep day field to gear list form

--- a/index.html
+++ b/index.html
@@ -796,6 +796,7 @@
       <h3>Project Requirements</h3>
       <div class="form-row"><label for="projectName">Project Name:<input type="text" id="projectName" name="projectName"></label></div>
       <div class="form-row"><label for="dop">DoP:<input type="text" id="dop" name="dop"></label></div>
+      <div class="form-row"><label for="prepDay">Prep Day:<input type="date" id="prepDay" name="prepDay"></label></div>
       <div class="form-row"><label for="firstDay">First Day of Shooting:<input type="date" id="firstDay" name="firstDay"></label></div>
       <div class="form-row"><label for="lastDay">Last Day of Shooting:<input type="date" id="lastDay" name="lastDay"></label></div>
       <div class="form-row"><label for="deliveryResolution">Delivery Resolution:<input type="text" id="deliveryResolution" name="deliveryResolution"></label></div>
