--- a/index.html
+++ b/index.html
@@ -797,9 +797,8 @@
       <h3>Project Requirements</h3>
       <div class="form-row"><label for="projectName">Project Name:<input type="text" id="projectName" name="projectName"></label></div>
       <div class="form-row"><label for="dop">DoP:<input type="text" id="dop" name="dop"></label></div>
-      <div class="form-row"><label for="prepDay">Prep Day:<input type="date" id="prepDay" name="prepDay"></label></div>
-      <div class="form-row"><label for="firstDay">First Day of Shooting:<input type="date" id="firstDay" name="firstDay"></label></div>
-      <div class="form-row"><label for="lastDay">Last Day of Shooting:<input type="date" id="lastDay" name="lastDay"></label></div>
+      <div class="form-row"><label for="prepStart">Prep Days:<input type="date" id="prepStart" name="prepStart"> to <input type="date" id="prepEnd" name="prepEnd"></label></div>
+      <div class="form-row"><label for="shootStart">Shooting Days:<input type="date" id="shootStart" name="shootStart"> to <input type="date" id="shootEnd" name="shootEnd"></label></div>
       <div class="form-row"><label for="deliveryResolution">Delivery Resolution:<input type="text" id="deliveryResolution" name="deliveryResolution"></label></div>
       <div class="form-row"><label for="recordingResolution">Recording Resolution:<input type="text" id="recordingResolution" name="recordingResolution"></label></div>
       <div class="form-row"><label for="aspectRatio">Aspect Ratio:<input type="text" id="aspectRatio" name="aspectRatio"></label></div>
