--- a/index.html
+++ b/index.html
@@ -184,9 +184,11 @@
     <p id="dtapWarning" role="status" aria-live="polite" aria-describedby="batteryLabel"></p>
     <div id="temperatureNote"></div>
     <button id="runtimeFeedbackBtn" type="button">Submit User Runtime Feedback</button>
-    <button id="generateGearListBtn" type="button">Generate Gear List and Project Requirements</button>
+    <div class="button-row">
+      <button id="copySummaryBtn" type="button">Copy Summary</button>
+      <button id="generateGearListBtn" type="button">Generate Gear List and Project Requirements</button>
+    </div>
     <div id="gearListOutput" class="hidden"></div>
-    <button id="copySummaryBtn" type="button">Copy Summary</button>
     <div id="feedbackTableContainer" class="hidden">
       <table id="userFeedbackTable" class="hidden"></table>
     </div>
