--- a/index.html
+++ b/index.html
@@ -806,8 +806,30 @@
       <div class="form-row"><label for="dop">DoP:<input type="text" id="dop" name="dop"></label></div>
       <div class="form-row"><label for="prepStart">Prep Days:<input type="date" id="prepStart" name="prepStart"> to <input type="date" id="prepEnd" name="prepEnd"></label></div>
       <div class="form-row"><label for="shootStart">Shooting Days:<input type="date" id="shootStart" name="shootStart"> to <input type="date" id="shootEnd" name="shootEnd"></label></div>
-      <div class="form-row"><label for="deliveryResolution">Delivery Resolution:<input type="text" id="deliveryResolution" name="deliveryResolution"></label></div>
-      <div class="form-row"><label for="recordingResolution">Recording Resolution:<input type="text" id="recordingResolution" name="recordingResolution"></label></div>
+      <div class="form-row"><label for="deliveryResolution">Delivery Resolution:<select id="deliveryResolution" name="deliveryResolution">
+          <option value=""></option>
+          <option value="720p">720p</option>
+          <option value="1080p">1080p</option>
+          <option value="2K">2K</option>
+          <option value="3.2K UHD">3.2K UHD</option>
+          <option value="4K">4K</option>
+          <option value="5K">5K</option>
+          <option value="6K">6K</option>
+          <option value="8K">8K</option>
+          <option value="12K">12K</option>
+        </select></label></div>
+      <div class="form-row"><label for="recordingResolution">Recording Resolution:<select id="recordingResolution" name="recordingResolution">
+          <option value=""></option>
+          <option value="720p">720p</option>
+          <option value="1080p">1080p</option>
+          <option value="2K">2K</option>
+          <option value="3.2K UHD">3.2K UHD</option>
+          <option value="4K">4K</option>
+          <option value="5K">5K</option>
+          <option value="6K">6K</option>
+          <option value="8K">8K</option>
+          <option value="12K">12K</option>
+        </select></label></div>
       <div class="form-row"><label for="aspectRatio">Aspect Ratio:<input type="text" id="aspectRatio" name="aspectRatio"></label></div>
       <div class="form-row"><label for="codec">Codec:<input type="text" id="codec" name="codec"></label></div>
       <div class="form-row"><label for="baseFrameRate">Base Frame Rate:<input type="text" id="baseFrameRate" name="baseFrameRate"></label></div>
