Improve layout for setup sections

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 
   <p id="tagline">Plan your camera setup and calculate power consumption &amp; battery life.</p>
 
+  <div id="setupContainer">
   <section id="setup-manager">
     <h2 id="setupManageHeading">Manage Setup</h2>
     <div class="form-row">
@@ -169,6 +170,7 @@
       </div>
     </div>
   </section>
+  </div>
 
   <section id="results">
     <h2 id="resultsHeading">Results</h2>
