--- a/index.html
+++ b/index.html
@@ -655,7 +655,7 @@
           <ul>
             <li>Open with <em>Edit Device Data…</em> to add, modify or remove devices.</li>
             <li>Changes are stored locally; use <em>Export</em> and <em>Import</em> to share databases.</li>
-            <li><em>Revert</em> restores defaults from <code>data.js</code>.</li>
+            <li><em>Revert</em> restores defaults from the files in <code>devices/</code>.</li>
           </ul>
         </section>
         <section data-help-section id="deviceCategoriesHelp">
@@ -794,7 +794,7 @@
           </details>
           <details class="faq-item">
             <summary>Where does the device data come from?</summary>
-            <p>The default database is defined in <code>data.js</code> from manufacturer specifications. You can modify or replace it via the Device Database Editor.</p>
+            <p>The default database is defined in the files under <code>devices/</code> from manufacturer specifications. You can modify or replace them via the Device Database Editor.</p>
           </details>
         </section>
       </div>
@@ -1027,7 +1027,14 @@
     </datalist>
   </dialog>
   <dialog id="overviewDialog"></dialog>
-  <script src="data.js"></script>
+  <script src="devices/index.js"></script>
+  <script src="devices/cameras.js"></script>
+  <script src="devices/monitors.js"></script>
+  <script src="devices/video.js"></script>
+  <script src="devices/fiz.js"></script>
+  <script src="devices/batteries.js"></script>
+  <script src="devices/cages.js"></script>
+  <script src="devices/gearList.js"></script>
   <script src="storage.js"></script>
   <script src="translations.js"></script>
   <script src="lz-string.min.js"></script>
