--- a/index.html
+++ b/index.html
@@ -543,6 +543,11 @@
         <ul id="batteryList" class="device-ul"></ul>
       </div>
       <div class="device-category">
+        <h4 id="category_accessory_batteries">Accessory Batteries</h4>
+        <input type="search" id="accessoryBatteryListFilter" class="list-filter" placeholder="Filter..." aria-label="Filter" inputmode="search" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
+        <ul id="accessoryBatteryList" class="device-ul"></ul>
+      </div>
+      <div class="device-category">
         <h4 id="category_camera_support">Camera Support</h4>
         <input type="search" id="cameraSupportListFilter" class="list-filter" placeholder="Filter..." aria-label="Filter" inputmode="search" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
         <ul id="cameraSupportList" class="device-ul"></ul>
