Document gear list feature and quick save

--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
         <section data-help-section id="managingSetups">
           <h3><span class="help-icon" aria-hidden="true">🗂️</span>Managing Setups</h3>
           <ul>
-            <li>Use <strong>Save</strong> to store the current configuration in your browser.</li>
+            <li>Use <strong>Save</strong> to store the current configuration in your browser. Press Enter or Ctrl+S (⌘S on macOS) to save quickly; the Save button stays disabled until a name is entered.</li>
             <li>Import, export or delete setups via the <em>Setup Actions</em> section.</li>
             <li><strong>Share Setup Link</strong> copies a URL for the current configuration.</li>
             <li><strong>Clear Current Setup</strong> removes all selected devices.</li>
