--- a/index.html
+++ b/index.html
@@ -1064,14 +1064,7 @@
     </datalist>
   </dialog>
   <dialog id="overviewDialog"></dialog>
-  <script>
-    // Polyfill globalThis for older Safari versions
-    if (typeof globalThis === 'undefined') {
-      // `var` ensures we create a global property without throwing
-      // even when the identifier does not yet exist.
-      var globalThis = (function () { return this; })();
-    }
-  </script>
+  <script src="globalthis-polyfill.js"></script>
   <script src="devices/index.js"></script>
   <script src="devices/cameras.js"></script>
   <script src="devices/monitors.js"></script>
