--- a/index.html
+++ b/index.html
@@ -854,6 +854,11 @@
           <option value="4:3">4:3</option>
           <option value="1.85:1">1.85:1</option>
           <option value="2.39:1">2.39:1</option>
+          <option value="1:1">1:1</option>
+          <option value="3:2">3:2</option>
+          <option value="2:1">2:1</option>
+          <option value="9:16">9:16</option>
+          <option value="21:9">21:9</option>
         </select></label></div>
       <div class="form-row"><label for="codec">Codec:<input type="text" id="codec" name="codec"></label></div>
       <div class="form-row"><label for="baseFrameRate">Base Frame Rate:<select id="baseFrameRate" name="baseFrameRate">
