Remove rigging and monitoring rows from gear table

--- a/index.html
+++ b/index.html
@@ -921,7 +921,7 @@
           <option value="Film magazines">Film magazines</option>
         </select>
       </label></div>
-      <div class="form-row"><label for="monitoringPreferences">Monitoring Preferences:
+      <div class="form-row"><label for="monitoringPreferences">Monitoring support:
         <select id="monitoringPreferences" name="monitoringPreferences" multiple size="18">
           <option value="VF Clean Feed">VF Clean Feed</option>
           <option value="Onboard Clean Feed">Onboard Clean Feed</option>
